--- a/src/app/modules/expense/expense-project-activity/expense-project-activity.component.html
+++ b/src/app/modules/expense/expense-project-activity/expense-project-activity.component.html
@@ -15,7 +15,4 @@
   [loading]="loading"
   [tableActions]="tableActions"
   (tableActionClicked)="tableActionClick($event)"
->
-<div custom-form>
-</div>
-</ngx-page>
+></ngx-page>
