--- a/src/app/modules/career-succession/planning/planning.component.html
+++ b/src/app/modules/career-succession/planning/planning.component.html
@@ -104,7 +104,7 @@
         </div>
         </div> -->
 
-        <div class="form-group row mydiv">
+        <div class="form-group row">
           <div class="col">
             <label for="Department" class="col-form-label mylabel">Employee</label>
             <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event,'employee')" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
@@ -154,7 +154,7 @@
 
 
          <div class="row">
-          <div class="form-group col col">
+          <div class="form-group col">
            <label>Purpose</label>
            <select type="text"  class="custom-select" name="purpose" #purpose="ngModel" [(ngModel)]="newSuccessionPlan.purpose">
             <option value="">--Select--</option>
@@ -167,7 +167,7 @@
          </div>
 
         <div class="row" style="margin-top: 20px">
-         <div class="form-group col col">
+         <div class="form-group col">
           <button nbButton status="primary" (click)="createSuccessionPlan()">Create</button>
          </div>
         </div>
