--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -1,6 +1,5 @@
 <ngx-componentsheader *ngIf="pageNo == 1"
-  pageName="Loan Request"
-  [requiredButton]="[{name:'request', label:'Add New'}]" (buttonClick)="gotoNext()"
+  pageName="Loan Request" (buttonClick)="gotoNext()"
 ></ngx-componentsheader>
 
 <ngx-componentsheader *ngIf="pageNo == 2"
@@ -58,9 +57,9 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <ngx-employee-master-search></ngx-employee-master-search>
+                        <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event,'employee')" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
                   </div>
-                </div>
+                    </div>
 
                 <div class="form-group row">
                   <div class="col-sm-3">
@@ -183,7 +182,7 @@
               <label for="">Add Guarantor(s)</label>
             </div>
             <div class="col-sm-6">
-              <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event,'employee')" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
+              <ngx-employee-master-search (masterSubmitted)="getGuarantors($event,'employee')" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
             </div>
           </div>
 
