Updated Succession Plan

--- a/src/app/modules/career-succession/succession-dashboard/succession-dashboard.component.html
+++ b/src/app/modules/career-succession/succession-dashboard/succession-dashboard.component.html
@@ -19,7 +19,7 @@
   </nb-card>
 </div>
 
-
+<h1>gjdjdjj</h1>
 <ngx-side-modal [(show)]='newPlan' style="width: 500px;">
   <div modal-header>Create Succession Plan</div>
   <div class="row" modal-body style="padding: 5px;">
@@ -77,6 +77,6 @@
         <button nbButton status="primary" (click)="createSuccessionPlan()">Modify</button>
        </div>
       </div>
-  </div> 
+  </div>
   </ngx-side-modal>
 
